--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-flask
-sentence-transformers
-faiss-cpu
-PyMuPDF
-transformers
-torch
+flask==3.1.1
+streamlit==1.47.1
+sentence-transformers==5.0.0
+faiss-cpu==1.11.0.post1
+PyMuPDF==1.26.3
+transformers==4.54.0
+torch==2.7.1
+requests==2.32.4
+numpy==2.3.2
